<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Nabbta</string>
    <string name="password">Password</string>
    <string name="email_phone">Email/Phone</string>
    <string name="forget_password"><u>Forget Password!</u></string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="policy"><u>shipment policy</u></string>
    <string name="terms_and_conditions"><u>Terms and conditions</u></string>
    <string name="pass_text">Confirm new password</string>
    <string name="old_password">old password</string>
    <string name="my_orders">My Orders</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="text_policy">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industryLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry </string>
    <string name="fill_all_data_error_message">Please Fill All Data!</string>
    <string name="password_lengrh_error_message">Password must be more than 8 character</string>
    <string name="no_internet_connection_error_message">NO Internet Connection :(</string>
    <string name="enter_mail_phone">Enter mail or phone</string>
    <string name="comment_successfully_message">comment added successfully wait for approve</string>
    <string name="comment_before_message">you have commented before</string>
    <string name="invaled_mail">Mail or Phone incorrect try again</string>
    <string name="data_updated_successfully">Data updated successfully</string>
    <string name="password_changed_message">Password Changed Successfully</string>
    <string name="request_service">Request Service</string>
    <string name="select_category_message">Select category first</string>
    <string name="select_image">select your Image</string>
    <string name="upload_image_erroe_message">you have uploaded all five images</string>
    <string name="select_time">Select Time</string>
    <string name="select_date">Select Date</string>
    <string name="location">Select Location</string>
    <string name="requested_successfully">Requested successfully</string>
    <string name="you_must_be_Register">you must be registered</string>
    <string name="product_added_to_cart_message">Product Added To Cart Successfully</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="cart_item_deleted_message">Product Deleted successfully</string>
    <string name="the_cart_is_empty">The Cart Is Empty</string>
    <string name="ship_to_my_address">Ship to my address</string>
    <string name="ship_to_another_address">Ship to another address</string>
    <string name="service_history_text">Services History</string>
    <string name="continue_to_payment">continue to payment</string>
    <string name="online_payment_sadad">Online Payment (Sadad)</string>
    <string name="cash_on_delivery_cod">Cash On Delivery (COD)</string>
    <string name="place_order">PLACE ORDER</string>
    <string name="pay">Pay</string>
    <string name="sdad">Sadad user name</string>
    <string name="rs">rs</string>
    <string name="cancel">Cancel</string>
    <string name="order_details">Order Details</string>
    <string name="best_seller">Best Seller</string>
    <string name="offers">Offers</string>
    <string name="new_arrivales">New Arrivales</string>
    <string name="user_name">user name</string>
    <string name="services">My Services</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="change_password">Change Password</string>
    <string name="change_language">اللغة العربية</string>
    <string name="logout">Logout...</string>
    <string name="activate_your_account">Activate your account</string>
    <string name="check_your_inbox_for_a_confirmation_email">check your inbox for a confirmation email</string>
    <string name="resend">Resend</string>
    <string name="new_password">New Password</string>
    <string name="reset_your_password">Reset your password</string>
    <string name="enter_the_code_sent_to">Enter the code sent to</string>
    <string name="delivery_options">Delivery options</string>
    <string name="sign_in_to_nabbta">Sign in to Nabbta</string>
    <string name="login">Login</string>
    <string name="skip">Skip</string>
    <string name="products">Products</string>
    <string name="quantity">Quantity</string>
    <string name="unit_price">Unit Price</string>
    <string name="subtotal">Subtotal</string>
    <string name="orders_history">Orders History</string>
    <string name="order_no">Order No.</string>
    <string name="status">Status</string>
    <string name="order_date">Order Date</string>
    <string name="payment_options">Payment options</string>
    <string name="description">Description:</string>
    <string name="dimensions">Dimensions:</string>
    <string name="reviews">Reviews:</string>
    <string name="submit">Submit</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="people_also_bought">People also bought</string>
    <string name="step_1">Step 1</string>
    <string name="sign_up_to_nabbta">sign up to nabbta</string>
    <string name="step_2">Step 2</string>
    <string name="you_need_to_agree_with_our">you need to agree with our</string>
    <string name="yard_area_meter_square">Yard area (meter square)</string>
    <string name="time_to_visit">Time to visit</string>
    <string name="please_upload_yard_photos">Please upload Yard photos</string>
    <string name="done">Done</string>
    <string name="step3">step3</string>
    <string name="service_no">Service No.</string>
    <string name="service_date">Service Date</string>
    <string name="price">Price :</string>
    <string name="sale_price">Sale Price:</string>
    <string name="total">Total :</string>
    <string name="select_category">select Category</string>
    <string name="select_subcategory">select subcategory</string>
    <string name="delete_from_cart">delete from cart</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="press_twice">press again to exit</string>
    <string name="active_account_message">you have to active your account</string>
    <string name="activate_your_account_text">Activate Your Account</string>
    <string name="invalid_code_message">Invalid Activation Code</string>
    <string name="incorrect_phone_number_message">Incorrect Phone Number</string>
    <string name="activation_code_sent">Activation code has been sent</string>
    <string name="agree_to_policy_conditions">You have to agree to policy and conditions</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="no_offers">No offers</string>
    <string name="invalid_user_password_message">User Name Or Password Is Invalid</string>
    <string name="select_country">select country first</string>
    <string name="shipping_address_update">shipping address updated successfully</string>
    <string name="order_deleted_successfully">Order deleted successfully</string>
    <string name="item_updated_successfully">Item Updated Successfully</string>
    <string name="fail_to_update_cart">Fail to Updated Cart Item</string>
    <string name="cart_empty">Cart is Empty</string>
    <string name="est">est.</string>
    <string name="order_number">Order No.</string>
    <string name="shipping_cost">Shipping Cost :</string>
    <string name="products_total">Products total :</string>
    <string name="payment_info">Payment information:</string>
    <string name="out_of_stock">OUT OF STOCK</string>
    <string name="out_of_stock_message">this product is out of stock!</string>
    <string name="no_orders">No Orders</string>
    <string name="no_services">No Services</string>
    <string name="invaled_data_entered">Make sure data entered is Correct!</string>
    <string name="password_confirmation_message">Password And Password Confirmation must be identical</string>
    <string name="or_activate_by_email">Or activate by email</string>
    <string name="mail_sent_message">Mail Sent Successfully</string>
    <string name="mail_sent_error_message">Some thing went wrong</string>
    <string name="no_best_seller">No Best Seller</string>
    <string name="no_new_arrival">No New Arrival</string>
    <string name="register_step3_text">You will be contacted by the service provider within the next 24 hours. If you have any questions, please do not hesitate to contact us through the communication channels</string>
    <string name="account_activated_successfully">Account Activated Successfully</string>
    <string name="phone_number_format">ex:009661234567</string>
    <string name="alert">Alert</string>
    <string name="not_now">Not Now</string>
    <string name="title_activity_maps">Map</string>
    <string name="this_mail_exist">this mail is exist</string>
    <string name="select_this_location">Select this location</string>
</resources>