<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="ViewModel"
            type="dp.com.nabbtabase.viewmodel.RegisterStep2ViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:layout_editor_absoluteY="25dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="52dp"
            android:layout_height="61dp"
            android:layout_marginTop="62dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_up_to_nabbta"
            android:textColor="@color/text_color_green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="19dp"
            android:layout_height="27dp"
            android:layout_marginTop="28dp"
            android:src="@drawable/flag_icon"
            app:layout_constraintEnd_toStartOf="@+id/et_first_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:hint="@string/country"
            android:onClick="@{ViewModel::country}"
            android:text="@{ViewModel.countryName}"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="19dp"
            android:layout_height="27dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/flag_icon"
            app:layout_constraintEnd_toEndOf="@+id/imageView7"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/imageView7" />

        <EditText
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:hint="@string/city"
            android:onClick="@{ViewModel::city}"
            android:text="@{ViewModel.cityName}"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintStart_toEndOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="26dp"
            android:layout_height="21dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/call_icon"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toBottomOf="@+id/imageView8" />

        <EditText
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/phone"
            android:maxLines="1"
            android:inputType="phone"
            android:text="@={ViewModel.phone}"
            android:textColor="@android:color/black"
            android:textColorLink="@color/text_color_green"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView9"
            app:layout_constraintStart_toEndOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/iv_address"
            android:layout_width="17dp"
            android:layout_height="23dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/placeholder"
            app:layout_constraintEnd_toEndOf="@+id/imageView9"
            app:layout_constraintStart_toStartOf="@+id/imageView9"
            app:layout_constraintTop_toBottomOf="@+id/imageView9" />

        <EditText
            android:id="@+id/et_address"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:hint="@string/address"
            android:maxLines="1"
            android:inputType="textPostalAddress"
            android:text="@={ViewModel.addressName}"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_address"
            app:layout_constraintStart_toEndOf="@+id/iv_address"
            app:layout_constraintTop_toTopOf="@+id/iv_address" />

        <CheckBox
            android:id="@+id/cb_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="33dp"
            android:layout_marginTop="28dp"
            android:buttonTint="@color/text_color_green"
            android:textColorLink="@color/text_color_green"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_address"
            android:checked="@={ViewModel.policy}"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/you_need_to_agree_with_our"
            android:textColor="@android:color/black"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_policy"
            app:layout_constraintStart_toEndOf="@+id/cb_policy"
            app:layout_constraintTop_toTopOf="@+id/cb_policy" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:onClick="policy"
            android:text="@string/policy"
            android:textColor="@color/text_color_green"
            android:textSize="13sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toTopOf="@+id/textView2"
            app:layout_constraintVertical_bias="0.0" />

        <CheckBox
            android:id="@+id/cb_terms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/text_color_green"
            app:layout_constraintEnd_toEndOf="@+id/cb_policy"
            app:layout_constraintStart_toStartOf="@+id/cb_policy"
            app:layout_constraintTop_toBottomOf="@+id/cb_policy"
            android:checked="@={ViewModel.terms}"/>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/you_need_to_agree_with_our"
            android:textColor="@android:color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/cb_terms"
            app:layout_constraintStart_toEndOf="@+id/cb_terms"
            app:layout_constraintTop_toTopOf="@+id/cb_terms" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/terms_and_conditions"
            android:onClick="terms"
            android:textColor="@color/text_color_green"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toTopOf="@+id/textView4" />

        <Button
            android:id="@+id/button2"
            android:layout_width="132dp"
            android:layout_height="36dp"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_shape"
            android:onClick="@{ViewModel::signUp}"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cb_terms" />

        <View
            android:id="@+id/view"
            android:layout_width="117dp"
            android:layout_height="9dp"
            android:layout_marginTop="17dp"
            android:background="@drawable/progress_bar_shape"
            android:backgroundTint="@color/text_color_green"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/step_2"
            android:textColor="@color/text_color_green"
            android:textSize="13sp"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="@+id/view"
            app:layout_constraintStart_toStartOf="@+id/view"
            app:layout_constraintTop_toBottomOf="@id/view" />

    </android.support.constraint.ConstraintLayout>
</layout>