<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="ViewModel"
            type="dp.com.nabbtabase.view.viewholder.PaymentViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/action_bar"
            layout="@layout/action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView36"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="5dp"
            android:text="@string/payment_options"
            android:textColor="@color/text_color_green"
            android:textSize="17sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/action_bar" />

        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/image_shape"
            android:backgroundTint="@color/text_color_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView36" />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/view6"
            app:layout_constraintStart_toStartOf="@+id/view6"
            app:layout_constraintTop_toTopOf="@+id/view6">

            <RadioButton
                android:id="@+id/rb_cash_on_delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="5dp"
                android:button="@drawable/radio_button_selector"
                android:checked="true"
                android:text="@string/cash_on_delivery_cod"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:layout_constraintStart_toStartOf="@+id/view6"
                app:layout_constraintTop_toTopOf="@+id/view6" />

            <RadioButton
                android:id="@+id/rb_online_payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="15dp"
                android:button="@drawable/radio_button_selector"
                android:clickable="false"
                android:text="@string/online_payment_sadad"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="@+id/view6"
                app:layout_constraintStart_toStartOf="@+id/view6" />
        </RadioGroup>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/user_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@+id/et_first_name"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="224dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:focusable="false"
            android:hint="@string/sdad"
            android:textColor="@android:color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/imageView7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <Button
            android:layout_width="116dp"
            android:layout_height="35dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_shape"
            android:backgroundTint="#59000000"
            android:clickable="false"
            android:focusable="false"
            android:text="@string/pay"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_first_name" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:background="@color/text_color_green"
            android:onClick="placeOrder"
            android:text="@string/place_order"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>