<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="ViewModel"
            type="dp.com.nabbtabase.viewmodel.ActivationViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="11dp"
            android:layout_height="19dp"
            android:layout_marginStart="30dp"
            android:layout_marginTop="30dp"
            android:onClick="back"
            android:scaleType="centerCrop"
            android:src="@drawable/left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="52dp"
            android:layout_height="61dp"
            android:layout_marginTop="62dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.503"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/activate_your_account_text"
            android:textColor="@color/text_color_green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:text="@string/enter_the_code_sent_to"
            android:textColor="@color/text_color_green"
            android:textSize="22sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <com.goodiebag.pinview.Pinview
            android:id="@+id/firstPinView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="8dp"
            android:textSize="18sp"
            app:cursorVisible="true"
            app:forceKeyboard="false"
            app:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            app:pinBackground="@drawable/rectangle"
            app:pinHeight="57dp"
            app:pinLength="4"
            app:pinWidth="42dp" />

        <Button
            android:layout_width="117dp"
            android:layout_height="36dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="41dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/button_shape"
            android:onClick="resend"
            android:text="@string/resend"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/firstPinView" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/logout"
            android:onClick="logout"
            android:textColor="@color/text_color_green"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/bt_mail_activation"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bt_mail_activation"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/text_color_green"
            android:text="@string/or_activate_by_email"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:onClick="mailActivation"/>

    </android.support.constraint.ConstraintLayout>
</layout>